cpyquaticus/envs/heron.h

typedef struct {
    float dt;
    float kp;
    float ki;
    float kd;
    float integral_max;
    float prev_error;
    float integral;
} PID;
typedef struct {
    int agent_id;
    int team;
    float max_speed;
    float speed_factor;
    float thrust_map[2][7]; 
    float max_thrust;
    float max_rudder;
    float turn_loss;
    float turn_rate;
    float max_acc;
    float max_dec;
    float dt;
    float thrust;
    float prev_pos[2];
    float pos[2];
    float speed;
    float heading;
    int has_flag;
    int on_their_side;
    float tagging_cooldown;
    int is_tagged;
    PID* speed_controller;
    PID* heading_controller;
} USV;
USV* create_heron(int agent_id, int team) {
    USV* heron = (USV*)malloc(sizeof(USV)); // Cast the return value of malloc
    if (heron == NULL) {
        fprintf(stderr, "Memory allocation failed!\n");
        exit(1); 
    }
    heron->team = team;
    heron->agent_id = agent_id;
    heron->max_speed = 3.5;
    heron->speed_factor = 20.0;
    // Initialize thrust_map with appropriate heron values
    memcpy(heron->thrust_map, heron_thrust_mapping, sizeof(heron_thrust_mapping)); 
    heron->max_thrust = 70.0;
    heron->max_rudder = 100.0;
    heron->turn_loss = 0.85;
    heron->turn_rate = 70.0;
    heron->max_acc = 1.0;
    heron->max_dec = 1.0;
    heron->thrust = 0.0;
    heron->prev_pos[0] = 0.0;
    heron->prev_pos[1] = 0.0;
    heron->pos[0] = 0.0;
    heron->pos[1] = 0.0;
    heron->speed = 0.0;
    heron->heading = 0.0;
    heron->dt = 0.1;
    heron->speed_controller = (PID*)malloc(sizeof(PID));
    heron->heading_controller = (PID*)malloc(sizeof(PID));
    //Assign Controller Speed Configs
    heron->speed_controller->dt = 0.1;
    heron->speed_controller->kp = 1.0;
    heron->speed_controller->ki = 0.0;
    heron->speed_controller->kd = 0.0;
    heron->speed_controller->integral_max = 0.07;
    heron->speed_controller->prev_error = 0.0;
    heron->speed_controller->integral = 0.0;
    //Assign Controller Heading Configs
    heron->heading_controller->dt = 0.1;
    heron->heading_controller->kp = 0.35;
    heron->heading_controller->ki = 0.0;
    heron->heading_controller->kd = 0.07;
    heron->heading_controller->integral_max = 0.07;
    heron->heading_controller->prev_error = 0.0;
    heron->heading_controller->integral = 0.0;
    heron->has_flag = 0;
    heron->on_their_side = 1;
    heron->tagging_cooldown = 0.0;
    heron->is_tagged = 0;
    return heron;
}
float min(float n1, float n2){
    if (n1 < n2){
        return n1;
    }
    return n2;
}
void move_heron(USV* heron, float desired_speed, float heading_error){
    float speed_error = desired_speed - heron->speed;
    desired_speed = controller_update(heron->speed_controller, speed_error);
    float desired_rudder = controller_update(heron->heading_controller, heading_error);
    float desired_thrust = heron->thrust + heron->speed_factor * desired_speed;
    desired_thrust = clip(desired_thrust, -1*heron->max_thrust, heron->max_thrust);
    // if (heron->agent_id == 1){
    //     printf("Desired Rudder: %f MAX Rudder: %f\n", desired_rudder, heron->max_rudder);
    // }
    desired_rudder = clip(desired_rudder, -1*heron->max_rudder, heron->max_rudder);

    float raw_speed = interp(desired_thrust, heron->thrust_map[0], heron->thrust_map[1], 7);
    float new_speed = min(raw_speed * (1-(fabs(desired_rudder)/100 * heron->turn_loss)), heron->max_speed);
    if ((new_speed - heron->speed)/heron->dt > heron->max_acc){
        new_speed = heron->speed + heron->max_acc * heron->dt;
    }
    else if ((heron->speed - new_speed) / heron->dt > heron->max_dec){
        new_speed = heron->speed - heron->max_dec * heron->dt;
    }
    float raw_d_hdg = desired_rudder * (heron->turn_rate / 100.0) * heron->dt;
    float thrust_d_hdg = raw_d_hdg * (1 + (fabs(desired_thrust)-50) / 50);
    //printf("Thrust d heading: %f\n", thrust_d_hdg);
    heron->thrust = desired_thrust;

    //If not moving then shouldn't be able to turn
    if ((new_speed + heron->speed)/2.0 < 0.5){
        thrust_d_hdg = 0.0;
    }
    float new_heading = angle180(heron->heading + thrust_d_hdg);

    float hdg_rad = heron->heading * (M_PI/180.0);
    float new_hdg_rad = new_heading * (M_PI/180.0);
    
    float avg_speed = (new_speed + heron->speed) / 2.0;

    float s = sin(new_hdg_rad) + sin(hdg_rad);
    float c = cos(new_hdg_rad) + cos(hdg_rad);
    float avg_hdg = atan2(s,c);

    heron->prev_pos[0] = heron->pos[0];
    heron->prev_pos[1] = heron->pos[1];
    heron->pos[0] = heron->pos[0] + sin(avg_hdg) * avg_speed * heron->dt;
    heron->pos[1] = heron->pos[1] + cos(avg_hdg) * avg_speed * heron->dt;
    //printf("Prev X %f prev Y: %f Curr X %f Curr Y: %f\n", heron->prev_pos[0], heron->prev_pos[1], heron->pos[0], heron->pos[1]);
    heron->speed = clip(new_speed, 0.0, heron->max_speed);
    heron->heading = angle180(new_heading);
    return;
}
void free_heron(USV* heron) {
    free(heron->speed_controller);
    free(heron->heading_controller); 
    free(heron);
}
PID* deep_copy_pid(PID* original) {
    if (original == NULL) {
        return NULL;
    }

    PID* copy = (PID*)malloc(sizeof(PID));
    if (copy == NULL) {
        fprintf(stderr, "Memory allocation failed for PID copy!\n");
        exit(1);
    }
    *copy = *original;
    return copy;
}
USV* deep_copy_heron(USV* original) {
    if (original == NULL) {
        return NULL;
    }

    USV* copy = (USV*)malloc(sizeof(USV));
    if (copy == NULL) {
        fprintf(stderr, "Memory allocation failed for USV copy!\n");
        exit(1);
    }

    // Copy primitive values
    *copy = *original;

    // Deep copy the thrust_map
    memcpy(copy->thrust_map, original->thrust_map, sizeof(original->thrust_map));

    // Deep copy speed_controller
    copy->speed_controller = (PID*)malloc(sizeof(PID));
    if (copy->speed_controller == NULL) {
        fprintf(stderr, "Memory allocation failed for speed controller!\n");
        free(copy);
        exit(1);
    }
    *copy->speed_controller = *original->speed_controller;

    // Deep copy heading_controller using helper function
    copy->heading_controller = deep_copy_pid(original->heading_controller);
    if (copy->heading_controller == NULL) {
        free(copy->speed_controller);
        free(copy);
        exit(1);
    }

    return copy;
}